# lvcore-rs

./: .gitignore  Cargo.toml  README.md
crates/lvcore/: Cargo.toml
crates/lvcore-cli/: Cargo.toml
crates/lvcore-cli/src/: main.rs  tests.rs  validate.rs
crates/lvcore/src/: body.rs  chm.rs  crypto.rs  diagnostics.rs  error.rs  gaiji.rs  hourei.rs  image.rs  ios_dictlist.rs  lib.rs  library.rs  lved_sqlite.rs  multiview.rs  navigation.rs  plist_xml.rs  render.rs  resources.rs  search.rs  sequence.rs  ssed.rs  ssed_aux_index.rs  ssed_color_sample.rs  ssed_encyclopedia.rs  ssed_figure.rs  ssed_ga16.rs  ssed_hc.rs  ssed_index.rs  ssed_loose_media.rs  ssed_menu.rs  ssed_multi.rs  ssed_panel.rs  ssed_pcmdata.rs  ssed_pdfspread.rs  ssed_screen_menu.rs  ssed_sidecar.rs  ssed_sound_data.rs  storage.rs  target.rs
crates/lvcore/src/lved_sqlite/: discovery.rs  schema.rs  sql_search.rs  tests.rs  title.rs  tree.rs
crates/lvcore/src/multiview/: menu.rs  tests.rs
crates/lvcore/src/package/: capabilities.rs  chm_toc.rs  drivers.rs  family_drivers.rs  hc_profile.rs  html.rs  lved_refs.rs  mod.rs  navigation_helpers.rs  render_output.rs  resource_helpers.rs  ssed_body_helpers.rs  ssed_detection.rs  ssed_index_probe.rs  ssed_payload.rs  ssed_search.rs  ssed_search_runtime.rs  ssed_zip.rs
crates/lvcore/src/package/drivers/: body.rs  body_hourei.rs  body_lved.rs  body_multiview.rs  body_ssed.rs  gaiji.rs  hourei_labels.rs  hourei_navigation.rs  html_resource_render.rs  law_render_refs.rs  lved_navigation.rs  lved_render_refs.rs  lved_retained_index.rs  multiview_navigation.rs  navigation.rs  package_files.rs  renderer.rs  renderer_input.rs  resource_common.rs  resource_ssed.rs  resources.rs  search.rs  search_hourei.rs  search_lved.rs  search_multiview.rs  search_ssed.rs  sequence.rs  sequence_hourei.rs  sequence_lved.rs  sequence_multiview.rs  sequence_ssed.rs  ssed_aux_surfaces.rs  ssed_component_resources.rs  ssed_components.rs  ssed_hanrei_discovery.rs  ssed_hanrei_surfaces.rs  ssed_index.rs  ssed_ios_addr_convert.rs  ssed_ios_app_menu_surfaces.rs  ssed_ios_plist_surfaces.rs  (+12 more)
crates/lvcore/src/package/drivers/tests/: dense_sidecar.rs  detection.rs  fulltext.rs  lved.rs  ssed_component_resources.rs  ssed_loose_resources.rs  ssed_navigation_surfaces.rs  ssed_renderer_input.rs  ssed_sizk.rs
crates/lvcore/src/ssed_index/: text.rs
crates/lvcore/src/ssed_loose_media/: britannica_html.rs  pcmu.rs  tests.rs
crates/lvcore/src/ssed_sidecar/: text.rs
crates/lvcore/tests/: architecture_contract.rs
crates/lvcore/tests/architecture_contract/: common.rs  detection.rs  gaiji_resources.rs  library.rs  lved.rs  mod.rs  multiview_hourei.rs  ssed_hanrei.rs  ssed_home.rs  ssed_menu_panel.rs  ssed_search.rs  ssed_title_browse.rs  target_render.rs
docs/: lvcore-remaining-gaps.md
