[workspace]
members = [
    "crates/lvcore",
    "crates/lvcore-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/shoui520/lvcore-rs"

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
thiserror = "2.0"
