[package]
name = "lvcore-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lvcore"
path = "src/main.rs"

[dependencies]
clap.workspace = true
lvcore = { path = "../lvcore" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
