[package]
name = "lvcore-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lvcore"
path = "src/main.rs"

[dependencies]
clap.workspace = true
lvcore = { path = "../lvcore" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rusqlite = { version = "0.40.0", features = ["sqlcipher"] }
tempfile.workspace = true
