[package]
name = "lvcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
base64.workspace = true
encoding_rs = "0.8"
hex.workspace = true
quick-xml.workspace = true
rusqlite = { version = "0.40.0", features = ["sqlcipher"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
